--- a/dashboard/Dockerfile_dashboard.yaml
+++ b/dashboard/Dockerfile_dashboard.yaml
@@ -2,11 +2,11 @@ FROM ubuntu:latest
 
 RUN apt-get update &&\
     apt-get install -y python3 &&\
-    python3-pip -y &&\
+    apt-get install python3-pip -y &&\
     pip install -r requirements.txt
 
 WORKDIR /home/user
 
 COPY dashboard.py dashboard.py
 
-CMD streamlit run dashboard.py
+ENTRYPOINT ["streamlit run dashboard.py"]
