--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,11 @@
 version: '3.9'
 
 services:
-    zookeeper:
-        image: wurstmeister/zookeeper
-        container_name: zookeeper
-        ports:
-          - "2181:2181"
     kafka:
-        image: wurstmeister/kafka
         container_name: kafka
-        ports:
-        - "9092:9092"
-        environment:
-            KAFKA_ADVERTISED_HOST_NAME: localhost
-            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+        build:
+            context: .
+            dockerfile: kafka_components/Dockerfile_kafka.yaml
     spark:
         image: cluster-apache-spark:3.0.2
         ports:
@@ -62,8 +54,11 @@ services:
             - ./apps:/opt/spark-apps
             - ./data:/opt/spark-data
     mongodb:
+         container_name: mongo
          image: mongo
          restart: always
+         ports:
+             - "27017:27017"
          environment:
              MONGO_INITDB_ROOT_USERNAME: root
              MONGO_INITDB_ROOT_PASSWORD: example
