--- a/dashboard/Dockerfile_dashboard.yaml
+++ b/dashboard/Dockerfile_dashboard.yaml
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 RUN apt-get update &&\
     apt-get install -y python3 &&\
     apt-get install python3-pip -y &&\
-    pip install -r requirements.txt
+    pip install -r config/requirements.txt
 
 WORKDIR /home/user
 
