update install spark

--- a/app/Dockerfile_app.yml
+++ b/app/Dockerfile_app.yml
@@ -1,53 +1,25 @@
+FROM ubuntu:latest
 
-# builder step used to download and configure spark environment
-FROM openjdk:8-jre-alpine as builder
+WORKDIR /home/user/app
 
-# Add Dependencies for PySpark
 RUN apt-get update &&\
-    apt-get install -y curl vim wget software-properties-common ssh net-tools ca-certificates &&\
-    apt-get install -y python3 python3-pip &&\
+    apt-get install -y curl vim wget software-properties-common ssh net-tools
+
+RUN apt-get install -y python3 python3-pip &&\
     pip install -r config/requirements.txt
 
 RUN update-alternatives --install "/usr/bin/python" "python" "$(which python3)" 1
 
-# Fix the value of PYTHONHASHSEED
-# Note: this is needed when you use Python 3.3 or greater
-ENV SPARK_VERSION=3.3.0 \
-HADOOP_VERSION=3.3 \
-SPARK_HOME=/opt/spark \
-PYTHONHASHSEED=1
+COPY app/* /home/user/app
 
-# Download and uncompress spark from the apache archive
-RUN wget --no-verbose -O apache-spark.tgz "https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz" &&\ 
-    mkdir -p /opt/spark &&\
-    tar -xf apache-spark.tgz -C /opt/spark --strip-components=1 &&\
-    rm apache-spark.tgz
+RUN apt-get -y install openjdk-8-jdk-headless
 
+RUN wget ttps://www.apache.org/dyn/closer.lua/spark/spark-3.3.0/spark-3.3.0-bin-hadoop3-scala2.13.tgz
+RUN mkdir -p /usr/local/spark-3.3.0
+RUN tar -zxf spark-3.3.0-bin-hadoop3-scala2.13.tgz -C /usr/local/spark-3.3.0/
+RUN rm spark-3.3.0-bin-hadoop3-scala2.13.tgz
 
-# Apache spark environment
-FROM builder as apache-spark
+ENV SPARK_HOME="/usr/local/spark-3.3.0/spark-3.3.0-bin-hadoop3"
+ENV PATH=$PATH:$SPARK_HOME/bin
 
-WORKDIR /opt/spark
-
-ENV SPARK_MASTER_PORT=7077
-SPARK_MASTER_WEBUI_PORT=8080
-SPARK_LOG_DIR=/opt/spark/logs
-SPARK_MASTER_LOG=/opt/spark/logs/spark-master.out
-SPARK_WORKER_LOG=/opt/spark/logs/spark-worker.out
-SPARK_WORKER_WEBUI_PORT=8080
-SPARK_WORKER_PORT=7000
-SPARK_MASTER="spark://spark-master:7077"
-SPARK_WORKLOAD="master"
-
-EXPOSE 8080 7077 6066
-
-RUN mkdir -p $SPARK_LOG_DIR && \
-    touch $SPARK_MASTER_LOG && \
-    touch $SPARK_WORKER_LOG && \
-    ln -sf /dev/stdout $SPARK_MASTER_LOG && \
-    ln -sf /dev/stdout $SPARK_WORKER_LOG
-
-COPY start-spark.sh /
-COPY app.py app.py
-
-ENTRYPOINT ["/bin/bash", "/start-spark.sh", "spark-submit --packages "org.apache.spark:spark-sql-kafka-0-10_2.12:3.3.0,org.mongodb.spark:mongo-spark-connector_2.12:3.0.1" app.py"]
+ENTRYPOINT ["spark-submit --packages "org.apache.spark:spark-sql-kafka-0-10_2.12:3.3.0,org.mongodb.spark:mongo-spark-connector_2.12:3.0.1" app.py"]
