--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,11 @@ services:
     - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
     - ALLOW_PLAINTEXT_LISTENER=yes
     - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-    - KAFKA_BROKER_ID=1
-    - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-    - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+    - KAFKA_BROKER_ID=0
+    - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT
+    - KAFKA_CFG_LISTENERS=CLIENT://:9092
+    - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:9092
+    - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
     depends_on:
     - zookeeper
 
