Update Dockerfile_dashboard Change entrypoint

--- a/dashboard/Dockerfile_dashboard
+++ b/dashboard/Dockerfile_dashboard
@@ -9,4 +9,4 @@ WORKDIR /home/user/dashboard
 
 COPY /dashboard/* /home/user/dashboard
 
-ENTRYPOINT ["streamlit run dashboard.py"]
+ENTRYPOINT ["streamlit", "run dashboard.py"]
