--- a/app/Dockerfile_app
+++ b/app/Dockerfile_app
@@ -1,25 +1,22 @@
 FROM ubuntu:latest
 
-RUN apt-get update &&\
-    apt-get install -y curl vim wget software-properties-common ssh net-tools
+WORKDIR /home/user/app
 
-RUN apt-get install -y python3 python3-pip &&\
-    pip install -r config/requirements.txt
+COPY app/* /home/user/app/
+
+RUN apt-get update &&\
+    apt-get install -y curl vim wget software-properties-common ssh net-tools python3 python3-pip &&\
+    pip install -r requirements.txt
 
 RUN update-alternatives --install "/usr/bin/python" "python" "$(which python3)" 1
 
-WORKDIR /home/user/app
-
-COPY app/* /home/user/app
-
-RUN apt-get -y install openjdk-8-jdk-headless
-
-RUN wget ttps://www.apache.org/dyn/closer.lua/spark/spark-3.3.0/spark-3.3.0-bin-hadoop3-scala2.13.tgz
-RUN mkdir -p /usr/local/spark-3.3.0
-RUN tar -zxf spark-3.3.0-bin-hadoop3-scala2.13.tgz -C /usr/local/spark-3.3.0/
-RUN rm spark-3.3.0-bin-hadoop3-scala2.13.tgz
+RUN apt-get -y install openjdk-8-jdk-headless &&\
+    wget https://dlcdn.apache.org/spark/spark-3.3.0/spark-3.3.0-bin-hadoop3-scala2.13.tgz &&\
+    mkdir -p /usr/local/spark-3.3.0 &&\
+    tar -zxf spark-3.3.0-bin-hadoop3-scala2.13.tgz -C /usr/local/spark-3.3.0/ &&\
+    rm spark-3.3.0-bin-hadoop3-scala2.13.tgz
 
 ENV SPARK_HOME="/usr/local/spark-3.3.0/spark-3.3.0-bin-hadoop3"
 ENV PATH=$PATH:$SPARK_HOME/bin
 
-ENTRYPOINT ["spark-submit --packages "org.apache.spark:spark-sql-kafka-0-10_2.12:3.3.0,org.mongodb.spark:mongo-spark-connector_2.12:3.0.1" app.py"]
+ENTRYPOINT ["spark-submit", "--packages "org.apache.spark:spark-sql-kafka-0-10_2.12:3.3.0,org.mongodb.spark:mongo-spark-connector_2.12:3.0.1"",  "./app.py"]
