--- a/app/Dockerfile_app
+++ b/app/Dockerfile_app
@@ -19,4 +19,4 @@ RUN apt-get -y install openjdk-8-jdk-headless &&\
 ENV SPARK_HOME="/usr/local/spark-3.3.0/spark-3.3.0-bin-hadoop3"
 ENV PATH=$PATH:$SPARK_HOME/bin
 
-ENTRYPOINT ["spark-submit", "--packages "org.apache.spark:spark-sql-kafka-0-10_2.12:3.3.0,org.mongodb.spark:mongo-spark-connector_2.12:3.0.1"",  "./app.py"]
+ENTRYPOINT ["python3", "./app.py"]
