--- a/dashboard/Dockerfile_dashboard
+++ b/dashboard/Dockerfile_dashboard
@@ -2,7 +2,7 @@ FROM ubuntu:latest
 
 WORKDIR /home/user/dashboard
 
-COPY dashboard/* /home/user/dashboard/
+COPY . .
 
 RUN apt-get update &&\
     apt-get install -y python3 python3-pip &&\
