--- a/dashboard/Dockerfile_dashboard
+++ b/dashboard/Dockerfile_dashboard
@@ -1,11 +1,9 @@
-FROM ubuntu:latest
+FROM python:3.9
 
 WORKDIR /home/user/dashboard
 
 COPY . .
 
-RUN apt-get update &&\
-    apt-get install -y python3 python3-pip &&\
-    pip install -r requirements.txt
+RUN pip install -r requirements.txt
 
 ENTRYPOINT ["streamlit", "run", "dashboard.py"]
