--- a/dashboard/Dockerfile_dashboard
+++ b/dashboard/Dockerfile_dashboard
@@ -1,9 +1,13 @@
-FROM python:3.9
+FROM ubuntu:latest
+
+EXPOSE 8501
 
 WORKDIR /home/user/dashboard
 
 COPY . .
 
-RUN pip install -r requirements.txt
+RUN apt-get update &&\
+    apt-get install -y python3 python3-pip &&\
+    pip install -r requirements.txt
 
 ENTRYPOINT ["streamlit", "run", "dashboard.py"]
