--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.7'
 networks:
   kafkazoo:
     driver: bridge
+  spark-network:
+    driver: bridge
 
 services:
   zookeeper:
@@ -25,14 +27,12 @@ services:
     volumes:
     - ./kafka_components/logs:/bitnami/kafka
     environment:
-    - KAFKA_BROKER_ID=1
     - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
     - ALLOW_PLAINTEXT_LISTENER=yes
-    - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
-    - KAFKA_CFG_LISTENERS=CLIENT://:9092,EXTERNAL://:9093
-    - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:9092,EXTERNAL://localhost:9093
-    - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
-    - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+    - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+    - KAFKA_BROKER_ID=1
+    - KAFKA_CFG_LISTENERS=PLAINTEXT://kafka:9092
+    - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
     depends_on:
       - zookeeper
 
@@ -48,19 +48,60 @@ services:
     depends_on:
       - kafka
   
-  spark:
-  # Official image from Docker Hub: https://hub.docker.com/r/apache/spark-py
-    container_name: spark
-    image: 'apache/spark-py:latest'
+  # spark:
+  # # Official image from Docker Hub: https://hub.docker.com/r/apache/spark-py
+  #   container_name: spark
+  #   image: 'apache/spark-py:latest'
+  #   build:
+  #     context: ./app
+  #     dockerfile: Dockerfile_app
+  #   networks:
+  #     - kafkazoo
+  #   ports:
+  #     - "8080:8080"
+  #   depends_on:
+  #     - kafka
+
+  spark-server:
+    image: bitnami/spark:latest
+    environment:
+      - SPARK_MODE=master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    ports:
+      - '8080:8080'
+      - '7077:7077'
+    networks:
+      - spark-network
+
+  spark-worker:
+    image: bitnami/spark:latest
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-server:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=2
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no  
+    networks:
+    - spark-network  
+
+  spark-app:
     build:
       context: ./app
       dockerfile: Dockerfile_app
     networks:
       - kafkazoo
+      - spark-network
     ports:
-      - "8080:8080"
+      - "8081:8081"
     depends_on:
       - kafka
+
 
   mongodb:
       # Official image from Docker Hub: https://hub.docker.com/_/mongo 
@@ -75,7 +116,7 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     depends_on:
-    - spark
+    - spark-app
 
   streamlit:
       container_name: streamlit
@@ -83,7 +124,7 @@ services:
           context: ./dashboard
           dockerfile: Dockerfile_dashboard
       ports:
-          - "81:81"
+          - "8501:8501"
       networks:
       - kafkazoo
       depends_on: 
