--- a/dashboard/Dockerfile_dashboard
+++ b/dashboard/Dockerfile_dashboard
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM python:3.10.7-slim-bullseye
 
 EXPOSE 8501
 
@@ -7,7 +7,6 @@ WORKDIR /home/user/dashboard
 COPY . .
 
 RUN apt-get update &&\
-    apt-get install -y python3 python3-pip &&\
     pip install -r requirements.txt
 
-ENTRYPOINT ["streamlit", "run", "dashboard.py"]
+ENTRYPOINT ["streamlit", "run", "dashboard.py", "--server.port=8501", "--server.address=0.0.0.0"]
