--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
     - kafkazoo
     ports:
     - "9092:9092"
-    volumes:
-    - ./kafka_components/logs:/bitnami/kafka
+    # volumes:
+    # - ./kafka_components/logs:/bitnami/kafka
     environment:
     - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
     - ALLOW_PLAINTEXT_LISTENER=yes
