--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,11 +81,8 @@ services:
     networks:
       - kafkazoo
       - spark-network
-    ports:
-      - "8081:8081"
     depends_on:
       - kafka
-
 
   mongodb:
       # Official image from Docker Hub: https://hub.docker.com/_/mongo 
@@ -101,6 +98,17 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     depends_on:
     - spark-app
+  
+    mongo-express:
+        container_name: mongoexpress
+        image: mongo-express
+        restart: always
+        ports:
+            - 8081:8081
+        environment:
+              ME_CONFIG_MONGODB_ADMINUSERNAME: root
+              ME_CONFIG_MONGODB_ADMINPASSWORD: example
+              ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
 
   streamlit:
       container_name: streamlit
