--- a/kafka_components/Dockerfile_kafka_app
+++ b/kafka_components/Dockerfile_kafka_app
@@ -1,12 +1,8 @@
-FROM ubuntu:latest
-# Official image from Docker Hub: https://hub.docker.com/_/ubuntu
+FROM python:3.10.7-slim-bullseye
 
 WORKDIR /home/user/kafka_components
 COPY . .
 
-RUN apt-get update &&\
-    apt-get install -y python3 &&\
-    apt-get install python3-pip -y &&\
-    pip install -r requirements.txt
+RUN pip install -r requirements.txt
 
 ENTRYPOINT ["python3", "producer.py"]
