--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,5 +1,5 @@
-matplotlib==3.6.0
-plotly==5.10.0
-pymongo==4.2.0
-streamlit==1.12.2
-wordcloud==1.8.2.2
+matplotlib
+plotly
+pymongo
+streamlit
+wordcloud
