--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,17 +20,15 @@ services:
     container_name: kafka
     networks:
       - kafkazoo
-    ports:
-      - "9092:9092"
-    # volumes:
-    # - ./kafka_components/logs:/bitnami/kafka
     environment:
+      - KAFKA_BROKER_ID=1
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-      - KAFKA_BROKER_ID=1
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://kafka:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_LISTENERS=CLIENT://:9092,EXTERNAL://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:9092,EXTERNAL://localhost:9093
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
     depends_on:
       - zookeeper
 
@@ -41,28 +39,31 @@ services:
       dockerfile: Dockerfile_kafka_app
     networks:
       - kafkazoo
-    ports:
-      - "80:80"
     depends_on:
       - kafka
 
   spark:
     container_name: spark
-    image: bitnami/spark:3.2.1
+    build:
+      context: ./spark
+      dockerfile: Dockerfile_spark
+    hostname: spark_master
+    user: root
     environment:
       - SPARK_MODE=master
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-    # ports:
-    #   - '8080:8080'
-    #   - '7077:7077'
     networks:
       - kafkazoo
+    depends_on:
+      - kafka
 
   spark-worker:
-    image: bitnami/spark:3.2.1
+    build:
+      context: ./spark
+      dockerfile: Dockerfile_spark
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark:7077
@@ -83,46 +84,38 @@ services:
       dockerfile: Dockerfile_app
     networks:
       - kafkazoo
-    # ports:
-    #   - "8081:8081"
     depends_on:
       - kafka
       - spark
 
 
-  mongodb:
-      # Official image from Docker Hub: https://hub.docker.com/_/mongo 
-    container_name: mongodb
-    image: mongo:latest
-    restart: always
-    ports:
-      - "27017:27017"
-    networks:
-      - kafkazoo
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=example
-      - MONGO_INITDB_DATABASE=sentiment_analysis
-    depends_on:
-      - spark-app
-    # volumes:
-      # - './data:/data/db'
+  # mongodb:
+  #     # Official image from Docker Hub: https://hub.docker.com/_/mongo 
+  #   container_name: mongodb
+  #   image: mongo:latest
+  #   restart: always
+  #   ports:
+  #     - "27017:27017"
+  #   networks:
+  #     - kafkazoo
+  #   environment:
+  #     - MONGO_INITDB_ROOT_USERNAME=root
+  #     - MONGO_INITDB_ROOT_PASSWORD=example
+  #     - MONGO_INITDB_DATABASE=sentiment_analysis
+  #   depends_on:
+  #     - spark-app
+  #   # volumes:
+  #     # - './data:/data/db'
 
 
-  streamlit:
-    container_name: streamlit
-    build:
-      context: ./dashboard
-      dockerfile: Dockerfile_dashboard
-    ports:
-      - "8501:8501"
-    networks:
-      - kafkazoo
-    depends_on: 
-      - mongodb
-
-volumes:
-  zookeeper_data:
-    driver: local
-  kafka_data:
-    driver: local
+  # streamlit:
+  #   container_name: streamlit
+  #   build:
+  #     context: ./dashboard
+  #     dockerfile: Dockerfile_dashboard
+  #   ports:
+  #     - "8501:8501"
+  #   networks:
+  #     - kafkazoo
+  #   depends_on: 
+  #     - mongodb
