--- a/kafka_components/Dockerfile_kafka_app
+++ b/kafka_components/Dockerfile_kafka_app
@@ -1,12 +1,9 @@
-FROM python:3.10.7-slim-bullseye
-
-# Official image from Docker Hub: https://hub.docker.com/_/ubuntu
+FROM python:3.10
 
 WORKDIR /home/user/kafka_components
 
 COPY . .
 
-RUN apt-get update &&\
-    pip install -r requirements.txt
+RUN pip install -r requirements.txt
 
 ENTRYPOINT ["python3", "producer.py"]
