--- a/app/Dockerfile_app
+++ b/app/Dockerfile_app
@@ -11,9 +11,12 @@ RUN apt-get update &&\
     apt-get install -y python3.10 python3-pip &&\
     pip install -r requirements.txt &&\
     apt-get install -y software-properties-common &&\
-    add-apt-repository ppa:deadsnakes/ppa
+    add-apt-repository ppa:deadsnakes/ppa&&\
+    export JAVA_HOME &&\
+    apt-get clean &&\
+    rm -rf /var/lib/apt/lists/*
 
-ENV PYSPARK_PYTHON python3.10
-ENV PYSPARK_DRIVER_PYTHON python3.10
+ENV PYSPARK_PYTHON python3
+ENV PYSPARK_DRIVER_PYTHON python3
 
 ENTRYPOINT ["python3", "app.py"]
