hidden username & password in dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-kafka_components/token_API.py
 app/database_auth.py
+dashboard/database_auth.py
+kafka_components/token_API.py
 __pycache__
-kubernetes
